--- a/src/content/docs/es/guides/integrations-guide/sitemap.mdx
+++ b/src/content/docs/es/guides/integrations-guide/sitemap.mdx
@@ -1,7 +1,7 @@
 ---
 type: integration
 title: '@astrojs/sitemap'
-description: Learn how to use the @astrojs/sitemap integration in your Astro project.
+description: Aprende cómo utilizar la integración @astrojs/sitemap en tu proyecto Astro.
 githubURL: 'https://github.com/withastro/astro/tree/main/packages/integrations/sitemap/'
 hasREADME: true
 category: other
@@ -10,42 +10,42 @@ i18nReady: true
 
 import Video from '~/components/Video.astro';
 
-This **[Astro integration][astro-integration]** generates a sitemap based on your routes when you build your Astro project.
+Esta **[integración de Astro][astro-integration]** genera un Sitemap basado en tus rutas al construir tu proyecto Astro.
 
-## Why Astro Sitemap
+## ¿Por qué Astro Sitemap?
 
-A Sitemap is an XML file that outlines all of the pages, videos, and files on your site. Search engines like Google read this file to crawl your site more efficiently. [See Google's own advice on sitemaps](https://developers.google.com/search/docs/advanced/sitemaps/overview) to learn more.
+Un Sitemap es un archivo XML que describe todas las páginas, videos y archivos de tu sitio. Los motores de búsqueda como Google leen este archivo para rastrear tu sitio de manera más eficiente. [Consulta el consejo de Google sobre los Sitemaps](https://developers.google.com/search/docs/advanced/sitemaps/overview) para obtener más información al respecto.
 
-A sitemap file is recommended for large multi-page sites. If you don't use a sitemap, most search engines will still be able to list your site's pages, but a sitemap is a great way to ensure that your site is as search engine friendly as possible.
+Se recomienda utilizar un archivo Sitemap para sitios grandes con múltiples páginas. Si no utilizas un Sitemap, la mayoría de los motores de búsqueda aún podrán listar las páginas de tu sitio, pero un Sitemap es una excelente manera de asegurarte de que tu sitio sea lo más amigable posible para los motores de búsqueda.
 
-With Astro Sitemap, you don't have to worry about creating this file: build your Astro site how you normally would, and the Astro Sitemap integration will crawl your routes and create the sitemap file.
+Con Astro Sitemap, no tienes que preocuparte por crear este archivo: construye tu sitio Astro como lo harías normalmente y la integración de Astro Sitemap rastreará tus rutas y creará el archivo del Sitemap.
 
-## Installation
+## Instalación
 
-### Quick Install
+### Instalación rápida
 
-The `astro add` command-line tool automates the installation for you. Run one of the following commands in a new terminal window. (If you aren't sure which package manager you're using, run the first command.) Then, follow the prompts, and type "y" in the terminal (meaning "yes") for each one.
+La herramienta de línea de comandos `astro add` automatiza la instalación por ti. Ejecuta uno de los siguientes comandos en una nueva ventana de terminal. (Si no estás seguro de qué administrador de paquetes estás usando, ejecuta el primer comando.) Luego, sigue las indicaciones y escribe "y" en la terminal (que significa "sí") para cada una.
 
 ```sh
-# Using NPM
+# Usando NPM
 npx astro add sitemap
-# Using Yarn
+# Usando Yarn
 yarn astro add sitemap
-# Using PNPM
+# Usando PNPM
 pnpm astro add sitemap
 ```
 
-If you run into any issues, [feel free to report them to us on GitHub](https://github.com/withastro/astro/issues) and try the manual installation steps below.
+Si tienes algún problema, [no dudes en informarnos en GitHub](https://github.com/withastro/astro/issues) y prueba los pasos de instalación manual a continuación.
 
-### Manual Install
+### Instalación manual
 
-First, install the `@astrojs/sitemap` package using your package manager. If you're using npm or aren't sure, run this in the terminal:
+Primero, instala el paquete `@astrojs/sitemap` usando tu administrador de paquetes. Si estás usando npm o no estás seguro, ejecuta esto en la terminal:
 
 ```sh
 npm install @astrojs/sitemap
 ```
 
-Then, apply this integration to your `astro.config.*` file using the `integrations` property:
+Luego, aplica esta integración a tu archivo `astro.config.*` usando la propiedad `integrations`:
 
 **`astro.config.mjs`**
 
@@ -59,9 +59,9 @@ export default defineConfig({
 })
 ```
 
-## Usage
+## Uso
 
-`@astrojs/sitemap` requires a deployment / site URL for generation. Add your site's URL under your `astro.config.*` using the `site` property. This must begin with `http:` or `https:`.
+`@astrojs/sitemap` requiere una URL de despliegue o del sitio para su generación. Agrega la URL de tu sitio bajo `astro.config.*` utilizando la propiedad `site`. Esta URL debe comenzar con `http:` o `https:`.
 
 **`astro.config.mjs`**
 
@@ -76,15 +76,15 @@ export default defineConfig({
 })
 ```
 
-Note that unlike other configuration options, `site` is set in the root `defineConfig` object, rather than inside the `sitemap()` call.
+Ten en cuenta que, a diferencia de otras opciones de configuración, `site` se establece en el objeto `defineConfig` raíz, en lugar de dentro de la llamada a `sitemap()`.
 
-Now, [build your site for production](/en/reference/cli-reference/#astro-build) via the `astro build` command. You should find your sitemap under `dist/` for both `sitemap-index.xml` and `sitemap-0.xml`!
+Ahora, [construye tu sitio para producción](/es/reference/cli-reference/#astro-build) utilizando el comando `astro build`. ¡Deberías encontrar tu sitemap en la carpeta `dist/` con los nombres `sitemap-index.xml` y `sitemap-0.xml`!
 
 :::caution
-If you forget to add a `site`, you'll get a friendly warning when you build, and the `sitemap-index.xml` file won't be generated.
+Si olvidas agregar la propiedad `site`, recibirás una advertencia amigable al realizar la compilación y el archivo `sitemap-index.xml` no se generará.
 :::
 
-After verifying that the sitemaps are built, you can add them to your site's `<head>` and the `robots.txt` file for crawlers to pick up.
+Después de verificar que los sitemaps se hayan construido, puedes agregarlos al elemento`<head>` de tu sitio y al archivo `robots.txt`  para que los rastreadores los detecten.
 
 ```html ins={3}
 // src/layouts/Layout.astro
@@ -100,7 +100,7 @@ Allow: /
 Sitemap: https://<YOUR SITE>/sitemap-index.xml
 ```
 
-### Example of generated files for a two-page website
+### Ejemplo de archivos generados para un sitio web de dos páginas
 
 **`sitemap-index.xml`**
 
@@ -127,9 +127,9 @@ Sitemap: https://<YOUR SITE>/sitemap-index.xml
 </urlset>
 ```
 
-## Configuration
+## Configuración
 
-To configure this integration, pass an object to the `sitemap()` function call in `astro.config.mjs`.
+Para configurar esta integración, pasa un objeto a la función `sitemap()` en la configuración de `astro.config.mjs`.
 
 **`astro.config.mjs`**
 
@@ -146,7 +146,7 @@ export default defineConfig({
 
 ### filter
 
-All pages are included in your sitemap by default. By adding a custom `filter` function, you can filter  included pages by URL.
+APor defecto, todas las páginas se incluyen en tu sitemap. Al agregar una función `filter` personalizada, puedes filtrar las páginas incluidas según su URL.
 
 **`astro.config.mjs`**
 
@@ -157,9 +157,9 @@ All pages are included in your sitemap by default. By adding a custom `filter` f
     }),
 ```
 
-The function will be called for every page on your site. The `page` function parameter is the full URL of the page currently under considering, including your `site` domain. Return `true` to include the page in your sitemap, and `false` to leave it out.
+La función se llamará para cada página de tu sitio. El parámetro `page` de la función es la URL completa de la página que se está considerando actualmente, incluyendo el dominio de tu `site`. Devuelve `true` para incluir la página en tu Sitemap y `false` para omitirla.
 
-To filter multiple pages, add arguments with target URLs.
+Para filtrar varias páginas, agrega argumentos con las URL de destino.
 
 **`astro.config.mjs`**
 
@@ -176,7 +176,7 @@ To filter multiple pages, add arguments with target URLs.
 
 ### customPages
 
-In some cases, a page might be part of your deployed site but not part of your Astro project. If you'd like to include a page in your sitemap that *isn't* created by Astro, you can use this option.
+En algunos casos, una página podría formar parte de tu sitio implementado pero no ser parte de tu proyecto de Astro. Si deseas incluir una página en tu sitemap que *no* sea creada por Astro, puedes utilizar esta opción.
 
 **`astro.config.mjs`**
 
@@ -189,7 +189,7 @@ In some cases, a page might be part of your deployed site but not part of your A
 
 ### entryLimit
 
-The maximum number entries per sitemap file. The default value is 45000. A sitemap index and multiple sitemaps are created if you have more entries. See this [explanation of splitting up a large sitemap](https://developers.google.com/search/docs/advanced/sitemaps/large-sitemaps).
+El número máximo de entradas por archivo de sitemap. El valor predeterminado es 45000. Se crea un índice de sitemap y múltiples sitemaps si tienes más entradas. Consulta esta [explicación sobre cómo dividir un sitemap grande](https://developers.google.com/search/docs/advanced/sitemaps/large-sitemaps).
 
 **`astro.config.mjs`**
 
@@ -207,14 +207,14 @@ export default defineConfig({
 });
 ```
 
-### changefreq, lastmod, and priority
+### changefreq, lastmod, y priority
 
-These options correspond to the `<changefreq>`, `<lastmod>`, and `<priority>` tags in the [Sitemap XML specification.](https://www.sitemaps.org/protocol.html)
+Estas opciones corresponden a las etiquetas `<changefreq>`, `<lastmod>`, y `<priority>` en la [especificación XML del Sitemap.](https://www.sitemaps.org/protocol.html)
 
-Note that `changefreq` and `priority` are ignored by Google.
+Ten en cuenta que Google ignora las propiedades `changefreq` y `priority`.
 
 :::note
-Due to limitations of Astro's [Integration API](/en/reference/integrations-reference/), this integration can't analyze a given page's source code. This configuration option can set `changefreq`, `lastmod` and `priority` on a *site-wide* basis; see the next option **serialize** for how you can set these values on a per-page basis.
+Debido a las limitaciones de la [API de Integración](/es/reference/integrations-reference/) de Astro, esta integración no puede analizar el código fuente de una página específica. Esta opción de configuración puede establecer `changefreq`, `lastmod` y `priority` de manera *global* para todo el sitio; consulta la siguiente opción **serialize** para ver cómo puedes establecer estos valores de forma específica para cada página.
 :::
 
 **`astro.config.mjs`**
@@ -237,23 +237,23 @@ export default defineConfig({
 
 ### serialize
 
-A function called for each sitemap entry just before writing to a disk. This function can be asynchronous.
+Una función que se llama para cada entrada del Sitemap justo antes de escribir en el disco. Esta función puede ser asíncrona.
 
-It receives as its parameter a `SitemapItem` object that can have these properties:
+Recibe como parámetro un objeto `SitemapItem` que puede tener estas propiedades:
 
-*   `url` (absolute page URL). This is the only property that is guaranteed to be on `SitemapItem`.
+*   `url` (URL absoluta de la página). Esta es la única propiedad que se garantiza que estará presente en `SitemapItem`.
 *   `changefreq`
-*   `lastmod` (ISO formatted date, `String` type)
+*   `lastmod` (Fecha en formato ISO, tipo `String`)
 *   `priority`
 *   `links`.
 
-This `links` property contains a `LinkItem` list of alternate pages including a parent page.
+La propiedad  `links`  contiene una lista de `LinkItem` que representa las páginas alternativas, incluida la página principal.
 
-The `LinkItem` type has two fields: `url` (the fully-qualified URL for the version of this page for the specified language) and `lang` (a supported language code targeted by this version of the page).
+El tipo `LinkItem` tiene dos campos: `url` (la URL completamente calificada para la versión de esta página en el idioma especificado) y `lang` (un código de idioma compatible dirigido por esta versión de la página).
 
-The `serialize` function should return `SitemapItem`, touched or not.
+La función `serialize` debe devolver un objeto `SitemapItem`, ya sea modificado o no.
 
-The example below shows the ability to add sitemap specific properties individually.
+El siguiente ejemplo muestra la capacidad de agregar propiedades específicas del Sitemap individualmente.
 
 **`astro.config.mjs`**
 
@@ -283,16 +283,16 @@ export default defineConfig({
 
 ### i18n
 
-To localize a sitemap, pass an object to this `i18n` option.
+Para localizar un Sitemap, pasa un objeto a la opción `i18n`.
 
-This object has two required properties:
+Este objeto tiene dos propiedades requeridas:
 
-*   `defaultLocale`: `String`. Its value must exist as one of `locales` keys.
-*   `locales`:  `Record<String, String>`, key/value - pairs. The key is used to look for a locale part in a page path. The value is a language attribute, only English alphabet and hyphen allowed.
+*   `defaultLocale`: `String`. Su valor debe existir como una de las claves de `locales`.
+*   `locales`:  `Record<String, String>`, pares clave/valor. La clave se utiliza para buscar la parte del idioma en una ruta de página. El valor es un atributo de idioma y solo se permiten letras del alfabeto inglés y guiones.
 
-[Read more about language attributes](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/lang).
+[Lee más sobre los atributos de idioma](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/lang).
 
-[Read more about localization](https://developers.google.com/search/docs/advanced/crawling/localized-versions#all-method-guidelines).
+[Lee más sobre la localización](https://developers.google.com/search/docs/advanced/crawling/localized-versions#all-method-guidelines).
 
 **`astro.config.mjs`**
 
@@ -305,9 +305,9 @@ export default defineConfig({
   integrations: [
     sitemap({  
       i18n: {
-        defaultLocale: 'en',   // All urls that don't contain `es` or `fr` after `https://stargazers.club/` will be treated as default locale, i.e. `en`
+        defaultLocale: 'en',   // Todas las URL que no contengan `es` o `fr` después de `https://stargazers.club/` se tratarán como el idioma predeterminado, es decir, `en`
         locales: {
-          en: 'en-US',         // The `defaultLocale` value must present in `locales` keys
+          en: 'en-US',         // El valor de `defaultLocale` debe estar presente en las claves de `locales`
           es: 'es-ES',
           fr: 'fr-CA',
         },
@@ -317,7 +317,7 @@ export default defineConfig({
 });
 ```
 
-The resulting sitemap looks like this:
+El sitemap resultante tiene el siguiente aspecto:
 
 ```xml
 ...
@@ -348,24 +348,24 @@ The resulting sitemap looks like this:
 ...
 ```
 
-## Examples
+## Ejemplos
 
-*   The official Astro website uses Astro Sitemap to generate [its sitemap](https://astro.build/sitemap-index.xml).
-*   The [integrations playground template](https://github.com/withastro/astro/tree/latest/examples/integrations-playground?on=github) comes with Astro Sitemap installed. Try adding a route and building the project!
-*   [Browse projects with Astro Sitemap on GitHub](https://github.com/search?q=%22@astrojs/sitemap%22+filename:package.json\&type=Code) for more examples!
+*   El sitio web oficial de Astro utiliza Astro Sitemap para generar [su sitemap](https://astro.build/sitemap-index.xml).
+*   La [plantilla del playground de integraciones](https://github.com/withastro/astro/tree/latest/examples/integrations-playground?on=github) viene con Astro Sitemap instalado. ¡Prueba añadir una ruta y construir el proyecto!
+*   [¡Explora proyectos con Astro Sitemap en GitHub](https://github.com/search?q=%22@astrojs/sitemap%22+filename:package.json\&type=Code) para más ejemplos!
 
-## Troubleshooting
+## Solución de problemas
 
-For help, check out the `#support` channel on [Discord](https://astro.build/chat). Our friendly Support Squad members are here to help!
+Para obtener ayuda, consulta el canal de `#support` en [Discord](https://astro.build/chat). ¡Nuestros amables miembros del equipo de soporte están aquí para ayudar!
 
-You can also check our [Astro Integration Documentation][astro-integration] for more on integrations.
+También puedes consultar nuestra [Documentación de Integración de Astro][astro-integration] para obtener más información sobre las integraciones.
 
-## Contributing
+## Contribuyendo
 
-This package is maintained by Astro's Core team. You're welcome to submit an issue or PR!
+Este paquete es mantenido por el equipo central de Astro. ¡Estás invitado a enviar un problema o PR!
 
 ## Changelog
 
-See [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/sitemap/CHANGELOG.md) for a history of changes to this integration.
+Consulta el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/sitemap/CHANGELOG.md) para un historial de cambios en esta integración.
 
-[astro-integration]: /en/guides/integrations-guide/
+[astro-integration]: /es/guides/integrations-guide/
