--- a/src/content/docs/en/core-concepts/astro-syntax.mdx
+++ b/src/content/docs/en/core-concepts/astro-syntax.mdx
@@ -134,22 +134,7 @@ An Astro component template can render multiple elements with no need to wrap ev
 <p>Astro supports multiple root elements in a template.</p>
 ```
 
-However, when using an expression to dynamically create multiple elements, you should wrap these elements inside a **fragment** as you would in JavaScript or JSX. Astro supports using either `<Fragment> </Fragment>` or the shorthand `<> </>`.
-
-```astro title="src/components/FragmentWrapper.astro" "<>" "</>"
----
-const items = ["Dog", "Cat", "Platypus"];
----
-<ul>
-  {items.map((item) => (
-    <>
-      <li>Red {item}</li>
-      <li>Blue {item}</li>
-      <li>Green {item}</li>
-    </>
-  ))}
-</ul>
-```
+Astro supports using either `<Fragment> </Fragment>` or the shorthand `<> </>`.
 
 Fragments can also be useful to avoid wrapper elements when adding [`set:*` directives](/en/reference/directives-reference/#sethtml), as in the following example:
 
