create new TODOs

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -467,19 +467,23 @@ To display each blogpost you'll create a catch-all route [xxx] matching the rout
 ## TODO
 [x] write draft
 [x] follow the tutorial: general connecting  ("part 1")
-* its a little odd to find <BaseLayout> in the very first code example
-* also, BUILDER_BLOGPOST_MODEL
-* might simplify the first part by making it a **page** model
 [x] follow the tutorial: build blog ("part 2")
-* problem with the flow of the instructions: there is no mention of the preview URL. idea 1: leave part 1 to be a content section model, then just assume that and build on that. idea 2: link back to the preview URL / mention it again. idea 3: give the instructions again
-* i feel the sections could be a little more unified. this might make it easier to follow. things that stick out: <FileTree> is used sometimes, sometimes not; steps are sometimes numbered, sometimes not. 
-* make it more concrete: tell what title and what slug to put in (makes it simpler later on)
 [x] dynamic preview URL??????
-[] go through stars * notes, mb make TODOs out of them
-* settle on tone; structure of steps; tutorial project structure (remove Baselayout?) --- look at other docs 
-[] unify tone --- AI, other astro stuff
+[x] go through stars * notes, mb make TODOs out of them
+[x] ask Discord about tone and structure
+[] read WRITING.md
+[] look at other astro stuff for ideas about tone and structure --- contently, storyblok, ghost
+[] unify the use of <FileTree>
+[] unify the structure of instructions --- numbering steps or not
+[] give concrete instructions instead of suggestions --- e.g. tell what title and what slug to put in (makes giving instructions simpler later on)
+[] settle on tone and address in terms of you/You/we/let's  
+[] fix the flow of the instructions: in part 2 there is no mention of the preview URL. idea 1: leave part 1 to be a content section model, then just assume that and build on that. idea 2: link back to the preview URL / mention it again. idea 3: give the instructions again. also relevant here: simplify the first part by making it a **page** model?
+[] go through code -- AI 
+  [] take out import scripts.js in <Baselayout> 
+  [] very first code example --- is <BaseLayout> needed?
+  [] sort out the BUILDER_BLOGPOST_MODEL issue
+[] unify tone --- AI, 
 [] fix typos -- AI
-[] go through code -- AI - import scripts.js in <Baselayout> 
 [] revise, simplify, clarify -- AI
 [] add links
 [] add screenshots 
