look at other CMS guides - update TODOs

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -471,8 +471,11 @@ To display each blogpost you'll create a catch-all route [xxx] matching the rout
 [x] dynamic preview URL??????
 [x] go through stars * notes, mb make TODOs out of them
 [x] ask Discord about tone and structure
-[] read WRITING.md
+[x] read WRITING.md
 [] look at other astro stuff for ideas about tone and structure --- contently, storyblok, ghost
+* from contentful/ghost: take the prerequisite section about setting up the .env file 
+* from Ghost CMS: take the structure of putting a <FileTree> at the beginning of each section
+* from ghost CMS: think about mb taking a step-by-step approach to the [slug] section 
 [] unify the use of <FileTree>
 [] unify the structure of instructions --- numbering steps or not
 [] give concrete instructions instead of suggestions --- e.g. tell what title and what slug to put in (makes giving instructions simpler later on)
@@ -491,8 +494,10 @@ To display each blogpost you'll create a catch-all route [xxx] matching the rout
 [] revise again --- AI
 [] write PR --- mention new ideas
 [] ask Discord about squashing commits
+[] add a logo to `/public/logos`? see here: https://github.com/withastro/docs/blob/main/RECIPES.md#cms-deploy-and-migrate
 
 ## FURTHER ideas
+* make WRITING.md more visible (e.g. put it on github repo)
 * do this with an integration 
 * add section for SSR whatever that is
 * 🧠 High level stuff: explain how to structure the data of a blogpost - what to put in a data field and what to put directly via Builder's drag and drop. might be more of a tutorial about how to map builder templates to components
