looking at other CMS guides - update TODOs...

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -472,10 +472,10 @@ To display each blogpost you'll create a catch-all route [xxx] matching the rout
 [x] go through stars * notes, mb make TODOs out of them
 [x] ask Discord about tone and structure
 [x] read WRITING.md
-[] look at other astro stuff for ideas about tone and structure --- contently, storyblok, ghost
+[x] look at other astro stuff for ideas about tone and structure --- contently, storyblok, ghost
 * from contentful/ghost: take the prerequisite section about setting up the .env file 
 * from Ghost CMS: take the structure of putting a <FileTree> at the beginning of each section
-* from ghost CMS: think about mb taking a step-by-step approach to the [slug] section 
+* from both: think about mb taking a step-by-step approach to the [slug] section --- 
 [] unify the use of <FileTree>
 [] unify the structure of instructions --- numbering steps or not
 [] give concrete instructions instead of suggestions --- e.g. tell what title and what slug to put in (makes giving instructions simpler later on)
