REVISE - unify _Setting up credentials_

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -11,15 +11,15 @@ import FileTree from '~/components/FileTree.astro';
 
 [Builder.io](https://www.builder.io/) is a visual CMS that supports drag and drop content editing for building web sites.
 
+At the end of this recipe you'll be able to create content in Builder's editor, and have your Astro site fetch this content automatically at build time using a webhook.
+
 ## Integrating with Astro
 
-:::note
-Builder can connect to your app in various ways. If You are using a JavaScript **framework** like Svelte, Vue, or React in your Astro project you can use [one of Builder's integrations](xxx).
+In this section, you'll use [Builder's REST APIs](xxx) to connect your Builder space to Astro with zero client-side JavaScript.
+
+:::note[Other options]
+If You are using a JavaScript framework (e.g. Svelte, Vue, or React) in your Astro project you can use [one of Builder's integrations](xxx).
 :::
-
-In this guide, you will use connect to your Astro project via [Builder's REST API](xxx). This way, things stay simple - your project doesn't need to use a framework or any client-side JavaScript at all. 
-
-You'll fetch your content at buld time, when Astro is generating your site. Lastly, You'll use webhooks to connect Builder to your hosting provider like Netlify or Vercel. That way, each time you'll make an edit in the Builder app your site gets updated automatically.
 
 ### Prerequisites
 
@@ -31,36 +31,49 @@ To get started, you will need to have the following:
 
 1. **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time. 
 
-2. **A builder.io account and space** - If you don't have an account yet, [sign up for free](https://www.builder.io/) and create a new space.
+2. **A Builder account and space** - If you don't have an account yet, [sign up for free](https://www.builder.io/) and create a new space.
 
-3. **A builder.io API key** - This key will be used to fetch your content and the HTML you create in the Builder editor. [Here's](https://www.builder.io/c/docs/using-your-api-key) Builder's guide how to find it. 
+3. **A Builder API key** - This key will be used when fetching your content from Builder. [Here's](https://www.builder.io/c/docs/using-your-api-key) Builder's guide how to find it. 
 
-4. A basic understanding of Builder - models, sections, preview URL and the REST API. [xxx] [xxx]
+4. ??? **A basic understanding of Builder** - specifically [section models](xxx), [custom data fields]() and [the preview URL]().
 
 ### Setting up credentials
 
-To add your Builder credentials to Astro, create a `.env` file in the root of your project with the following variable:
+To add your Builder API key to Astro, create a `.env` file in the root of your project with the following variable:
 
 ```ini title="/.env"
 BUILDER_API_PUBLIC_KEY=YOUR_KEY
 ```
 
+Now, you should be able to use this API key in your project. 
+
 :::note
-At the time of writing, the key for the Builder API we use here is public [xxx] - so you don't have to worry about hiding or encrypting it. 
+At the time of writing, this key for the Builder API is public [xxx] - so you don't have to worry about hiding or encrypting it. 
 :::
 
-You could paste it into your API call directly, but since we'll be making a few of these calls, it makes sense to put it in a separate file that we can access from multiple places. Learn more about [setting environment variables in Astro](https://docs.astro.build/en/guides/environment-variables/#setting-environment-variables).
+If you would like to have IntelliSense for your Contentful environment variables, you can create a `env.d.ts` file in the `src/` directory and configure `ImportMetaEnv` like this:
 
-Now, you should be able to use your API key in your project.
+```ts title="src/env.d.ts"
+interface ImportMetaEnv {
+  readonly BUILDER_API_PUBLIC_KEY: string;
+}
+```
 
-Your root directory should now include this new file:
+Your root directory should now include these new files:
 
 <FileTree title="Project Structure">
-  - src/ 
-  - **.env** 
-  - astro.config.mjs 
-  - package.json
+- src/
+  - **env.d.ts**
+- **.env**
+- astro.config.mjs
+- package.json
 </FileTree>
+
+:::tip
+You could paste the key into your API call directly, but since you'll be making a few of these calls, it makes sense to put it in a separate file where you can access it from multiple places.
+
+Read more about [using environment variables](/en/guides/environment-variables/) and `.env` files in Astro.
+:::
 
 ### Configuring Builder
 Create or pick an existing model that you'll use to build your site. This guide uses a [section model](xxx) representing a blog post. 
