--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -15,7 +15,7 @@ At the end of this recipe you'll be able to create content in Builder's editor, 
 
 ## Integrating with Astro
 
-In this section, you'll use [Builder's REST APIs](xxx) to connect your Builder space to Astro with zero client-side JavaScript.
+In this section, you'll use 2 [Builder's REST APIs](xxx) to connect your Builder space to Astro with zero client-side JavaScript.
 
 :::note[Other options]
 If You are using a JavaScript framework (e.g. Svelte, Vue, or React) in your Astro project you can use [one of Builder's integrations](xxx).
@@ -25,17 +25,17 @@ If You are using a JavaScript framework (e.g. Svelte, Vue, or React) in your Ast
 
 To get started, you will need to have the following:
 
-0a. ??? *A basic knowledge of using a code editor / the command line* - You can read a beginner-friendly introduction here [https://www.tatianamac.com/posts/beginner-eleventy-tutorial-partii/#1a.-terminal-emulator]
+* ??? *A basic knowledge of using a code editor / the command line* - You can read a beginner-friendly introduction here [https://www.tatianamac.com/posts/beginner-eleventy-tutorial-partii/#1a.-terminal-emulator]
 
-0b. ??? *A basic knowledge of REST APIs*
+* ??? *A basic knowledge of REST APIs*
 
-1. **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time. 
+* **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time. 
 
-2. **A Builder account and space** - If you don't have an account yet, [sign up for free](https://www.builder.io/) and create a new space.
+* **A Builder account and space** - If you don't have an account yet, [sign up for free](https://www.builder.io/) and create a new space.
 
-3. **A Builder API key** - This key will be used when fetching your content from Builder. [Here's](https://www.builder.io/c/docs/using-your-api-key) Builder's guide how to find it. 
+* **A Builder API key** - This key will be used when fetching your content from Builder. [Here's](https://www.builder.io/c/docs/using-your-api-key) Builder's guide how to find it. 
 
-4. ??? **A basic understanding of Builder** - specifically [section models](xxx), [custom data fields]() and [the preview URL]().
+* ??? **A basic understanding of Builder** - specifically [section models](xxx), [custom data fields]() and [the preview URL]().
 
 ### Setting up credentials
 
@@ -76,7 +76,7 @@ Read more about [using environment variables](/en/guides/environment-variables/)
 :::
 
 ### Configuring Builder
-Create or pick an existing model that you'll use to build your site. This guide uses a [section model](xxx) representing a blog post. 
+Create a model that you'll use to build your site. This guide uses a [section model](xxx) representing a blog post. 
 
 #### Connecting the Preview URL 
 
