--- a/src/content/docs/zh-cn/guides/integrations-guide/mdx.mdx
+++ b/src/content/docs/zh-cn/guides/integrations-guide/mdx.mdx
@@ -72,7 +72,7 @@ Astro 的 MDX 集成为标准的 MDX 增加了额外的功能，包括 Markdown 
 
 在我们的 [Markdown & MDX 指南](/zh-cn/guides/markdown-content/)中可以看到 MDX 在 Astro 中的工作原理和例子。
 
-访问 [MDX docs](https://mdxjs.com/docs/what-is-mdx/)，了解使用标准 MDX 功能的情况。
+访问 [MDX 文档](https://mdxjs.com/docs/what-is-mdx/)，了解使用标准 MDX 功能的情况。
 
 ## 配置
 
