--- a/src/content/docs/zh-cn/guides/integrations-guide/tailwind.mdx
+++ b/src/content/docs/zh-cn/guides/integrations-guide/tailwind.mdx
@@ -99,7 +99,7 @@ import tailwind from '@astrojs/tailwind';
 
 export default defineConfig({
   integrations: [tailwind({
-    // Example: Provide a custom path to a Tailwind config file
+    // 示例：为 Tailwind 配置文件提供一个自定义路径
     config: { path: './custom-config.cjs' },
   })],
 });
