--- a/src/content/docs/zh-cn/guides/integrations-guide/tailwind.mdx
+++ b/src/content/docs/zh-cn/guides/integrations-guide/tailwind.mdx
@@ -126,7 +126,7 @@ import { defineConfig } from 'astro/config';
 export default defineConfig({
   integrations: [tailwind({
     // Example: Disable injecting a basic `base.css` import on every page.
-    // Useful if you need to define and/or import your own custom `base.css`.
+    // 如果你需要定义或导入你自己的 "base.css"，这很有用。
     config: { applyBaseStyles: false },
   })],
 });
