--- a/src/content/docs/zh-cn/guides/integrations-guide/tailwind.mdx
+++ b/src/content/docs/zh-cn/guides/integrations-guide/tailwind.mdx
@@ -125,7 +125,7 @@ import { defineConfig } from 'astro/config';
 
 export default defineConfig({
   integrations: [tailwind({
-    // Example: Disable injecting a basic `base.css` import on every page.
+    // 示例：在每个页面上禁用注入基本的`base.css`导入。
     // 如果你需要定义或导入你自己的 "base.css"，这很有用。
     config: { applyBaseStyles: false },
   })],
